--- a/one.html
+++ b/one.html
@@ -4,40 +4,40 @@
 
 
 <script>
-// let theNumber = Number(prompt("Pick a number"));
-// document.write("Your number is the square root of " +
-//             theNumber * theNumber);
+let theNumber = Number(prompt("Pick a number"));
+document.write("Your number is the square root of " +
+            theNumber * theNumber);
 
-//             let theNumber = Number(prompt("Pick a number"));
-// if (!Number.isNaN(theNumber)) {
-//     document.write("Your number is the square root of " +
-//               theNumber * theNumber);
-// }
+            let theNumber = Number(prompt("Pick a number"));
+if (!Number.isNaN(theNumber)) {
+    document.write("Your number is the square root of " +
+              theNumber * theNumber);
+}
 
-// document.write(true || false);
+document.write(true || false);
 
-// document.write(true || true);
+document.write(true || true);
 
-// document.write(false || false);
+document.write(false || false);
 
-// document.write(false || true);
+document.write(false || true);
 
-// const square = function(x) {
-//   return x * x;
-// };
+const square = function(x) {
+  return x * x;
+};
 
 
 
-// document.write(square(12));
+document.write(square(12));
 
-// const halve = function(n) {
-//   return n / 2;
-// };
+const halve = function(n) {
+  return n / 2;
+};
 
-// let y = 10;
-// document.write(halve(100));
+let y = 10;
+document.write(halve(100));
 // → 50
-// document.write(halve(y));
+document.write(halve(y));
 // → 10
 
 
